--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -3,7 +3,11 @@
   "name": "Avalab.aiの生成画像を非表示にするやつ",
   "description": "Avalab.aiの生成画像を非表示とする拡張機能。",
   "version": "1.0",
-  "permissions": ["storage"],
+  "permissions": ["storage"], "icons": {
+    "16": "icon/icon-16.png",
+    "48": "icon/icon-48.png",
+    "128": "icon/icon-128.png"
+  },
   "content_scripts": [
     {
       "matches": ["https://avalab.ai/generate"],
